# code_analizer

./: .gitignore  README.md  output.txt  pyproject.toml  requirements.txt  setup.py
code_analizer/: __init__.py  api.py  code_analyzer.py  config.py  guis.py  line_processor.py  main.py  output_handlers.py  scr.py  settings.ini
code_analizer/core/: __init__.py  analyzer.py  code_analyzer.py  code_text_analyzer.py  data_classes.py  dataclasses.py  file_batch_analyzer.py  line_processor.py
code_analizer/core/formatters/: __init__.py  base.py  console.py  html.py  json.py  text.py
code_analizer/core/interfaces/: I_formatter.py  I_printer.py  __init__.py  formatter.py  i_printer.py  i_upload_file.py  printer.py
code_analizer/core/wrappers/: __init__.py  file_wrapper.py
code_analizer/output/: __init__.py  factory.py  output_handlers.py  output_path.py
code_analizer/output/printers/: __init__.py  base.py  console.py  file.py  json.py
code_analizer/settings/: manager.py
