[tool.poetry]
name = "code-analizer"
version = "0.0.06"
description = "Пакет анализа кода проекта"
authors = ["Andrey Nikolaevich Korenyuk <korenyuk.a.n@mail.ru>"]
license = "LICENSE.txt"
readme = "README.md"
packages = [{include = "code-analizer"}]


[tool.poetry.dependencies]
python = "^3.9"
gitignore-parser = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
