[tool.poetry]
name = "code-analizer"
version = "0.0.06"
description = "Пакет Python для анализа кода проекта"
authors = ["Andrey Korenyuk <korenyuk.a.n@mail.ru>"]
license = "LICENSE.txt"
readme = "README.md"
packages = [{include = "code_analizer"}]

[tool.poetry.dependencies]
python = "^3.9"
gitignore-parser = "^0.1.3"
pyyaml = "^6.0.2"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
